--- a/Main/Application/templates/Application/Slide10.html
+++ b/Main/Application/templates/Application/Slide10.html
@@ -2,6 +2,9 @@
 {% load static %}
    
 {% block content %}
+
+    <link rel="stylesheet" href="{% static 'main.css' %}">
+
     <section id="landing-section" class="container-fluid">
         <div class="land">
             <img class="land__ellipses" src="{% static 'images/ellipses.png' %}" alt="">
