--- a/Main/Application/templates/Application/Slide14.html
+++ b/Main/Application/templates/Application/Slide14.html
@@ -1,60 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+{% extends 'Application/base.html' %}
+{% load static %}
 
-    <link rel="stylesheet" href="main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-</head>
-<body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark indigo">
-        <a class="navbar-brand" href="#"><img src="images/favicon.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Live classes <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Video Library</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Course</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Book</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Board</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
+{% block content %}
+<link rel="stylesheet" href="{% static 'main.css' %}">
     <section id='section-question' class="container-fluid">
-        <img class="question-img1" src="images/ellipses.png" alt="">
-        <img class="question-img2" src="images/ellipse.png" alt="">
-        <img class="question-img3" src="images/ellipses.png" alt="">
+        <img class="question-img1" src="{% static 'images/ellipses.png' %}" alt="">
+        <img class="question-img2" src="{% static 'images/ellipse.png' %}" alt="">
+        <img class="question-img3" src="{% static 'images/ellipses.png' %}" alt="">
         <div class="question">
             <h1 class="question__heading">Class 9th > Maths > NCERT > <span>Chapter 1</span></h1>
             <h3 class="question__subheading">Exercise 1.1 > <span>Question 2</span> </h3>
             <p class="question__para">If the polynomials az3 + 4z2 + 3z -4 and z3 - 4z + a leave the same remainder when divided by z - 3, find the value of a</p>
             <div class="question__content">
-                <img class="question__content--img" src="images/tablet.png" alt="">
+                <img class="question__content--img" src="{% static 'images/tablet.png' %}" alt="">
                 <div class="question__content--icon">
                     <div class="question__content--icon-eye">
-                        <img class="question__content--icon-eye-img" src="images/eye.png" alt="">
+                        <img class="question__content--icon-eye-img" src="{% static 'images/eye.png' %}" alt="">
                         <h3 class="question__content--icon-eye-value">2289</h3>
                     </div>
                     <div class="question__content--icon-like">
-                        <img class="question__content--icon-like-img" src="images/like.png" alt="">
+                        <img class="question__content--icon-like-img" src="{% static 'images/like.png' %}" alt="">
                         <h3 class="question__content--icon-like-value">1545</h3>
                     </div>
                 </div>
@@ -65,11 +30,11 @@
                 <h1 class="question1__heading">Excercise <span>Questions</span></h1>
                 <div class="question1__content">
                     <div class="question1__content--img">
-                        <img class="question1__content--img-image" src="images/arora.png" alt="">
+                        <img class="question1__content--img-image" src="{% static 'images/arora.png' %}" alt="">
                         <h3 class="question1__content--img-text">Q2</h3>
                     </div>
                     <div class="question1__content--img">
-                        <img class="question1__content--img-image" src="images/arora.png" alt="">
+                        <img class="question1__content--img-image" src="{% static 'images/arora.png' %}" alt="">
                         <h3 class="question1__content--img-text">Q2</h3>
                     </div>
                     <button class="question1__content--previous">< <span>Previous Question</span> </button>
@@ -84,35 +49,35 @@
                     <div class="chips">
                         <div class="chips__box">
                             <div class="chips__box--item chips__box--green">
-                                <img class="chips__box--item-img" src="images/pradeep.png" alt="">
+                                <img class="chips__box--item-img" src="{% static 'images/pradeep.png' %}" alt="">
                                 <h4 class="chips__box--item-title">Q1</h4>
                             </div>
                             <div class="chips__box--item chips__box--pink">
-                                <img class="chips__box--item-img" src="images/arora.png" alt="">
+                                <img class="chips__box--item-img" src="{% static 'images/arora.png' %}" alt="">
                                 <h4 class="chips__box--item-title">Q2</h4>
                             </div>
                             <div class="chips__box--item chips__box--orange">
-                                <img class="chips__box--item-img" src="images/sinha.png" alt="">
+                                <img class="chips__box--item-img" src="{% static 'images/sinha.png' %}" alt="">
                                 <h4 class="chips__box--item-title">Q3</h4>
                             </div>
                             <div class="chips__box--item chips__box--blue">
-                                <img class="chips__box--item-img" src="images/ncert.png" alt="">
+                                <img class="chips__box--item-img" src="{% static 'images/ncert.png' %}" alt="">
                                 <h4 class="chips__box--item-title">Q4</h4>
                             </div>
                             <div class="chips__box--item chips__box--green">
-                                <img class="chips__box--item-img" src="images/pradeep.png" alt="">
+                                <img class="chips__box--item-img" src="{% static 'images/pradeep.png' %}" alt="">
                                 <h4 class="chips__box--item-title">Q1</h4>
                             </div>
                             <div class="chips__box--item chips__box--pink">
-                                <img class="chips__box--item-img" src="images/arora.png" alt="">
+                                <img class="chips__box--item-img" src="{% static 'images/arora.png' %}" alt="">
                                 <h4 class="chips__box--item-title">Q2</h4>
                             </div>
                             <div class="chips__box--item chips__box--orange">
-                                <img class="chips__box--item-img" src="images/sinha.png" alt="">
+                                <img class="chips__box--item-img" src="{% static 'images/sinha.png' %}" alt="">
                                 <h4 class="chips__box--item-title">Q3</h4>
                             </div>
                             <div class="chips__box--item chips__box--blue">
-                                <img class="chips__box--item-img" src="images/ncert.png" alt="">
+                                <img class="chips__box--item-img" src="{% static 'images/ncert.png' %}" alt="">
                                 <h4 class="chips__box--item-title">Q4</h4>
                             </div>
                         </div>
@@ -127,7 +92,7 @@
 
         <section style="font-family: 'Roboto', sans-serif;" class="footer-sec1">
 
-            <img style="transform:scale(.8)" src="images/favicon.png" alt="Coursify" height="80px">
+            <img style="transform:scale(.8)" src="{% static 'images/favicon.png' %}" alt="Coursify" height="80px">
 
             <section class="flex footer-sec2 contact">
 
@@ -163,13 +128,13 @@
 
                   <span class="flex">
 
-                      <a class="m-2" href="#"><img width="29" height="29" src="images/facebook.png" alt=""></a>
+                    <a class="m-2" href="#"><img width="29" height="29" src="{% static 'images/facebook.png' %}" alt=""></a>
 
-                      <a class="m-2" href="#"><img width="29" height="29" src="images/instagram.png" alt=""></a>
+                    <a class="m-2" href="#"><img width="29" height="29" src="{% static 'images/instagram.png' %}" alt=""></a>
 
-                      <a class="m-2" href="#"><img width="29" height="29" src="images/youtube.png" alt=""></a>
+                    <a class="m-2" href="#"><img width="29" height="29" src="{% static 'images/youtube.png' %}" alt=""></a>
 
-                      <a class="m-2" href="#"><img width="29" height="29" src="images/linkedin.png" alt=""></a>
+                    <a class="m-2" href="#"><img width="29" height="29" src="{% static 'images/linkedin.png' %}" alt=""></a>
 
                   </span>
 
@@ -353,9 +318,4 @@
 
 </div>
 
-    <script src="main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock %}
