--- a/Main/Application/templates/Application/Slide15.html
+++ b/Main/Application/templates/Application/Slide15.html
@@ -1,78 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+{% extends 'Application/base.html' %}
+{% load static %}
 
-    <link rel="stylesheet" href="main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-</head>
-<body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark indigo">
-        <a class="navbar-brand" href="#"><img src="images/favicon.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Live classes <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Video Library</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Course</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Book</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Board</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
+{% block content %}
+<link rel="stylesheet" href="{% static 'main.css' %}">
     <section id="section-join" class="container-fluid">
-        <img class="join-img1" src="images/ellipses.png" alt="">
-        <img class="join-img2" src="images/ellipse.png" alt="">
-        <img class="join-img3" src="images/ellipses.png" alt="">
-        <img class="join-img4" src="images/ellipses.png" alt="">
-        <img class="join-img5" src="images/ellipses.png" alt="">
+        <img class="join-img1" src="{% static 'images/ellipses.png' %}" alt="">
+        <img class="join-img2" src="{% static 'images/ellipse.png' %}" alt="">
+        <img class="join-img3" src="{% static 'images/ellipses.png' %}" alt="">
+        <img class="join-img4" src="{% static 'images/ellipses.png' %}" alt="">
+        <img class="join-img5" src="{% static 'images/ellipses.png' %}" alt="">
         <div class="join">
-            <img class="join__img" src="images/group.jpg" alt="">
+            <img class="join__img" src="{% static 'images/group.jpg' %}" alt="">
             <div class="join__content">
                 <h2 class="join__content--title">Join Us at <span>Coursify</span></h2>
-                <h4 class="join__content--sub"><img class="join__content--sub-img" src="images/tick.png" alt="">  Join a growing Startup</h4>
-                <h4 class="join__content--sub"><img class="join__content--sub-img" src="images/tick.png" alt="">  Create an impact in the Team</h4>
-                <h4 class="join__content--sub"><img class="join__content--sub-img" src="images/tick.png" alt="">  display your Achievements</h4>
-                <h4 class="join__content--sub"><img class="join__content--sub-img" src="images/tick.png" alt="">  Boost your Career Growth</h4>
+                <h4 class="join__content--sub"><img class="join__content--sub-img" src="{% static 'images/tick.png' %}" alt="">  Join a growing Startup</h4>
+                <h4 class="join__content--sub"><img class="join__content--sub-img" src="{% static 'images/tick.png' %}" alt="">  Create an impact in the Team</h4>
+                <h4 class="join__content--sub"><img class="join__content--sub-img" src="{% static 'images/tick.png' %}" alt="">  display your Achievements</h4>
+                <h4 class="join__content--sub"><img class="join__content--sub-img" src="{% static 'images/tick.png' %}" alt="">  Boost your Career Growth</h4>
                 <button class="join__content--btn">View All opportunities</button>
             </div>
 
             <div class="join__images">
                 <div class="join__images--box">
-                    <img class="join__images--box-item" src="images/teach1.jpg" alt="">
+                    <img class="join__images--box-item" src="{% static 'images/teach1.jpg' %}" alt="">
                     <h2 class="join__images--box-text">Impact <span>Millions</span> of Lives</h2>
                 </div>
                 <div class="join__images--box">
-                    <img class="join__images--box-item" src="images/teach2.jpg" alt="">
+                    <img class="join__images--box-item" src="{% static 'images/teach2.jpg' %}" alt="">
                     <h2 class="join__images--box-text"><span>10X Growth</span> of the Company</h2>
                 </div>
                 <div class="join__images--box">
-                    <img class="join__images--box-item" src="images/teach3.jpg" alt="">
+                    <img class="join__images--box-item" src="{% static 'images/teach3.jpg' %}" alt="">
                     <h2 class="join__images--box-text"> <span>Embrace the</span> Startup Culture</h2>
                 </div>
             </div>
         </div>
 
         <div class="join__us">
-            <img class="join__us--img" src="images/help.png" alt="">
+            <img class="join__us--img" src="{% static 'images/help.png' %}" alt="">
             <div class="join__us--content">
                 <h1 class="join__us--content-heading">Join Us and Start your <span>Growth Journey!</span> </h1>
                 <p class="join__us--content-para">We are looking for the best minds to Join our Team</p>
@@ -86,7 +51,7 @@
 
         <section style="font-family: 'Roboto', sans-serif;" class="footer-sec1">
 
-            <img style="transform:scale(.8)" src="images/favicon.png" alt="Coursify" height="80px">
+            <img style="transform:scale(.8)" src="{% static 'images/favicon.png' %}" alt="Coursify" height="80px">
 
             <section class="flex footer-sec2 contact">
 
@@ -122,13 +87,13 @@
 
                   <span class="flex">
 
-                      <a class="m-2" href="#"><img width="29" height="29" src="images/facebook.png" alt=""></a>
+                    <a class="m-2" href="#"><img width="29" height="29" src="{% static 'images/facebook.png' %}" alt=""></a>
 
-                      <a class="m-2" href="#"><img width="29" height="29" src="images/instagram.png" alt=""></a>
+                    <a class="m-2" href="#"><img width="29" height="29" src="{% static 'images/instagram.png' %}" alt=""></a>
 
-                      <a class="m-2" href="#"><img width="29" height="29" src="images/youtube.png" alt=""></a>
+                    <a class="m-2" href="#"><img width="29" height="29" src="{% static 'images/youtube.png' %}" alt=""></a>
 
-                      <a class="m-2" href="#"><img width="29" height="29" src="images/linkedin.png" alt=""></a>
+                    <a class="m-2" href="#"><img width="29" height="29" src="{% static 'images/linkedin.png' %}" alt=""></a>
 
                   </span>
 
@@ -311,10 +276,4 @@
 </footer>
 
 </div>
-
-    <script src="main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock %}
