--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -369,7 +369,8 @@ body {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
   column-gap: 6rem;
-  grid-template-areas: 'twelve eleven' 'other other'; }
+  grid-template-areas: 'twelve eleven'
+ 'other other'; }
   .standard__11 {
     margin-left: 10rem;
     grid-area: eleven; }
@@ -524,7 +525,9 @@ body {
   .standard {
     grid-template-columns: 100%;
     grid-template-rows: repeat(3, min-content);
-    grid-template-areas: 'twelve' 'eleven'  'other'; }
+    grid-template-areas: 'twelve'
+ 'eleven' 
+ 'other'; }
     .standard__11 {
       margin-left: 5%; }
     .standard__11, .standard__12 {
@@ -611,7 +614,8 @@ body {
       grid-template-columns: min-content 90%;
       grid-template-rows: repeat(2, min-content);
       column-gap: 2rem;
-      grid-template-areas: 'img head' 'img sub'; }
+      grid-template-areas: 'img head'
+ 'img sub'; }
       .course__box--content-img {
         grid-area: img;
         width: 7.5rem;
@@ -718,7 +722,8 @@ body {
       grid-template-columns: min-content 90%;
       grid-template-rows: repeat(2, min-content);
       column-gap: 2rem;
-      grid-template-areas: 'img head' 'img sub'; }
+      grid-template-areas: 'img head'
+ 'img sub'; }
       .embark__box--content-img {
         grid-area: img;
         width: 5.5rem;
@@ -965,7 +970,8 @@ body {
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: repeat(2, 1fr);
-  grid-template-areas: 'text comp' 'work work';
+  grid-template-areas: 'text comp'
+ 'work work';
   position: relative; }
   .doubts__img {
     grid-area: comp;
@@ -983,7 +989,8 @@ body {
       margin-left: -10rem;
       grid-template-columns: 15% 85%;
       grid-template-rows: repeat(2, min-content);
-      grid-template-areas: 'img head' 'img sub'; }
+      grid-template-areas: 'img head'
+ 'img sub'; }
       .doubts__box--content-img {
         margin-top: .5rem;
         grid-area: img;
@@ -1156,7 +1163,9 @@ body {
   .doubts {
     grid-template-columns: 100%;
     grid-template-rows: repeat(3, min-content);
-    grid-template-areas: 'comp' 'text' 'work'; }
+    grid-template-areas: 'comp'
+ 'text'
+ 'work'; }
     .doubts__box {
       margin-top: 5rem;
       margin-left: 3rem;
@@ -1508,7 +1517,8 @@ body {
         display: grid;
         grid-template-columns: 10% 90%;
         column-gap: 2rem;
-        grid-template-areas: 'img tit' 'img para'; }
+        grid-template-areas: 'img tit'
+ 'img para'; }
         .jee .reading__content--sub-img {
           margin-top: 1rem;
           align-self: start;
@@ -1612,7 +1622,7 @@ body {
         .jee .best__content--box-img {
           width: 18rem;
           height: 18rem;
-          background-image: url("/images/group.jpg");
+          background-image: url("../static/images/group.jpg");
           background-size: cover;
           -webkit-clip-path: circle(50% at 50% 50%);
           clip-path: circle(50% at 50% 50%);
@@ -1651,9 +1661,9 @@ body {
         grid-row: 1 / 3;
         width: 7rem;
         height: 7rem;
-        background-size: cover;
         border-radius: 20rem;
-        background-image: url("/images/teach2.jpg"); }
+        background-image: url("../static/images/group.jpg");
+        background-size: cover; }
       .jee .say__content--para {
         justify-self: end;
         width: 80%;
@@ -2051,7 +2061,8 @@ body {
       display: grid;
       grid-template-columns: repeat(2, max-content);
       grid-template-rows: repeat(2, min-content);
-      grid-template-areas: 'img head' 'img sub'; }
+      grid-template-areas: 'img head'
+ 'img sub'; }
       .live__box--content-img {
         grid-area: img;
         width: 50%;
@@ -3620,7 +3631,8 @@ nav {
       display: grid;
       grid-template-columns: min-content 90%;
       grid-template-rows: repeat(2, min-content);
-      grid-template-areas: 'img head' 'sub sub'; }
+      grid-template-areas: 'img head'
+ 'sub sub'; }
       .video__box--content-img {
         grid-area: img;
         width: 6rem;
