--- a/Main/Application/templates/Application/boardexams.html
+++ b/Main/Application/templates/Application/boardexams.html
@@ -14,9 +14,9 @@
                         <a id="vlink1" class="mylink text-center px-5 py-2 border-bottom" style="color: white;background-color: #DB0C3E;">Board Exams</a>
                         <a href="{% url 'schoolexams' %}" id="vlink2" class="mylink text-center px-5 py-2 border-bottom" style="color: #1E4190;">School Exams</a>
                         <a href="{% url 'jeemain' %}" id="vlink3" class="mylink text-center px-5 py-2 border-bottom" style="color: #1E4190;">JEE-Mains</a>
-                        <a id="vlink4" class="mylink text-center px-5 py-2 border-bottom" style="color: #1E4190;">JEE-Advaced</a>
-                        <a href="./jeeadvanced.html" id="vlink5" class="mylink text-center px-5 py-2 border-bottom" style="color: #1E4190;">NEET</a>
-                        <a href="./previousyear.html" id="vlink6" class="mylink text-center py-2" style="color: #1E4190;">Previous Year Qs</a>
+                        <a href="{% url 'jeeadvance' %}"id="vlink4" class="mylink text-center px-5 py-2 border-bottom" style="color: #1E4190;">JEE-Advaced</a>
+                        <a href="{% url 'neet' %}" id="vlink5" class="mylink text-center px-5 py-2 border-bottom" style="color: #1E4190;">NEET</a>
+                        <a href="{% url 'previousyear' %}"" id="vlink6" class="mylink text-center py-2" style="color: #1E4190;">Previous Year Qs</a>
                     </section>
                 </section>
                 <div class="py-1 show">
