--- a/Main/static/chapter.css
+++ b/Main/static/chapter.css
@@ -18,6 +18,30 @@ a
     color: black;
 }
 
+@keyframes moveDownShow {
+    0% {
+      opacity: 0;
+      transform: translateY(-6rem); }
+    100% {
+      opacity: 1;
+      transform: translateY(0rem); } }
+
+.navbar-brand img {
+    height: 5rem; }
+  
+  nav {
+    background: white; }
+  
+  .navbar-nav .nav-item .nav-link {
+    transform: translateX(-2rem);
+    color: #4B4B4B !important;
+    font-size: 1.25rem;
+    margin-left: 1.5rem;
+    font-weight: 500;
+    border-bottom: .3rem solid transparent; }
+    .navbar-nav .nav-item .nav-link:active, .navbar-nav .nav-item .nav-link:focus {
+      border-bottom: 0.3rem solid #DF0B39; }
+
 .card
 {
     border-radius: 15px;
@@ -112,22 +136,6 @@ ul
 .landing
 {
     width: 100vw;
-}
-
-nav
-{
-width: 98%;
-display: flex;
-justify-content: space-between;
-}
-
-nav ul
-{
-width: 40%;
-display: flex;
-justify-content: space-around;
-font-size: 20px;
-align-items: center;
 }
 
 .maincard
