--- a/Main/Application/templates/Application/base.html
+++ b/Main/Application/templates/Application/base.html
@@ -15,26 +15,26 @@
 <body>
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark indigo">
-        <a class="navbar-brand" href="#"><img src="{% static 'images/favicon.png' %}" alt=""></a>
+        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/favicon.png' %}" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Live classes <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'live' %}">Live classes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Video Library</a>
+                    <a class="nav-link" href="{% url 'video' %}">Video Library</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Course</a>
+                    <a class="nav-link" href="{% url 'course' %}">Course</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Book</a>
+                    <a class="nav-link" href="{% url 'book' %}">Book</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Board</a>
+                    <a class="nav-link" href="{% url 'board' %}">Board</a>
                 </li>
             </ul>
         </div>
@@ -43,6 +43,7 @@
     {% block content %}{% endblock %}
     
     <script src="{% static 'main.js' %}"></script>
+    <script src="{% static 'app.js' %}"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
