--- a/Main/Application/templates/Application/base.html
+++ b/Main/Application/templates/Application/base.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="{% url 'live' %}">Live classes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'video' %}">Video Library</a>
+                    <a class="nav-link" href="{% url 'boardexams' %}">Video Library</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'course' %}">Course</a>
