--- a/Main/Application/templates/Application/book_list.html
+++ b/Main/Application/templates/Application/book_list.html
@@ -10,21 +10,21 @@
             <section class="flex">
                 <h1 class="blue">Maths</h1>
                 <ul class="flex">
-                    <li><a href="./book1.html"><img src="{% static 'images/pradeep1.png' %}" alt=""></a></li>
-                    <li><a href="./book1.html"><img src="{% static 'images/ncert1.png' %}" alt=""></a></li>
-                    <li><a href="./book1.html"><img src="{% static 'images/kcsinha1.png' %}" alt=""></a></li>
-                    <li><a href="./book1.html"><img src="{% static 'images/slarora.png' %}" alt=""></a></li>
-                    <li><a href="./book1.html"><img src="{% static 'images/pradeep1.png' %}" alt=""></a></li>
-                    <li><a href="./book1.html"><img src="{% static 'images/ncert1.png' %}" alt=""></a></li>
+                    <li><a href="{% url 'ncert' %}"><img src="{% static 'images/pradeep1.png' %}" alt=""></a></li>
+                    <li><a href="{% url 'ncert' %}"><img src="{% static 'images/ncert1.png' %}" alt=""></a></li>
+                    <li><a href="{% url 'ncert' %}"><img src="{% static 'images/kcsinha1.png' %}" alt=""></a></li>
+                    <li><a href="{% url 'ncert' %}"><img src="{% static 'images/slarora.png' %}" alt=""></a></li>
+                    <li><a href="{% url 'ncert' %}"><img src="{% static 'images/pradeep1.png' %}" alt=""></a></li>
+                    <li><a href="{% url 'ncert' %}"><img src="{% static 'images/ncert1.png' %}" alt=""></a></li>
                 </ul>
             </section>
             <section class="flex">
                 <h1 class="blue">Science</h1>
                 <ul class="flex">
-                    <li><a href="./book1.html"><img src="{% static 'images/pradeep1.png' %}" alt=""></a></li>
-                    <li><a href="./book1.html"><img src="{% static 'images/ncert1.png' %}" alt=""></a></li>
-                    <li><a href="./book1.html"><img src="{% static 'images/kcsinha1.png' %}" alt=""></a></li>
-                    <li><a href="./book1.html"><img src="{% static 'images/slarora.png' %}" alt=""></a></li>
+                    <li><a href="{% url 'ncert' %}"><img src="{% static 'images/pradeep1.png' %}" alt=""></a></li>
+                    <li><a href="{% url 'ncert' %}"><img src="{% static 'images/ncert1.png' %}" alt=""></a></li>
+                    <li><a href="{% url 'ncert' %}"><img src="{% static 'images/kcsinha1.png' %}" alt=""></a></li>
+                    <li><a href="{% url 'ncert' %}"><img src="{% static 'images/slarora.png' %}" alt=""></a></li>
                 </ul>   
             </section>
             </div>
