--- a/Main/Application/templates/Application/home.html
+++ b/Main/Application/templates/Application/home.html
@@ -1690,7 +1690,7 @@
                     </div>
                 </div>
                 <h1 class="blue" style="font-family:poppins;">FIRST CLASS FREE!</h1>
-                    <a class="btn btn-danger border-radius-15" href="{% url 'live' %}">Book a class now!</a>
+                    <a class="btn btn-danger border-radius-15" href="">Book a class now!</a>
             </div>
         <div class="d-flex flex-column justify-content-around align-items-center mains">
             <h1 style="font-family: 'Poppins', sans-serif;" class="text-center my-5 font-weight-bold d-flex flex flex-column"><span class="mb-2">JEE Mains & Advanced Preparation</span><span style="width: 75%;margin: auto;height:4px;background: #DB0C3E;border-radius: 50px;"></span> </h1>
@@ -1781,7 +1781,7 @@
                     </section>
                 </div>
             </section>
-            <a class="btn btn-danger border-radius-15 my-5 px-5" href="{% url 'jeemain' %}">Prepare for JEE now</a>
+            <a class="btn btn-danger border-radius-15 my-5 px-5" href="">Prepare for JEE now</a>
         </div>
     </div>
 
@@ -1876,7 +1876,7 @@
                 </section>
             </section>
         </div>
-        <a class="btn btn-danger border-radius-15 my-5 px-5" href="{% url 'neet' %}">Prepare for NEET now</a>
+        <a class="btn btn-danger border-radius-15 my-5 px-5" href="">Prepare for NEET now</a>
     </div>
 
     <div class="tilescrousel">
@@ -2303,7 +2303,7 @@
                   </svg>                  
                 </section>
                 <section class="d-flex m-auto justify-content-end" style="width:60%">
-                    <a class="text-danger float-right mt-5 font-size-20"  href="{% url 'book' %}">View all</a>
+                    <a class="text-danger float-right mt-5 font-size-20"  href="">View all</a>
                 </section>
         </div>
         <div>
