--- a/Main/Application/templates/Application/course.html
+++ b/Main/Application/templates/Application/course.html
@@ -173,7 +173,7 @@
 
     </section>
 
-    <section id="section-need" class="container-fluid">
+    <section id="section-need" style="position: relative;" class="container-fluid">
         <img class="jee-img3" src="{% static 'images/ellipses.png' %}" alt="">
         <h1 class="need-heading">Course that you might Need...</h1>
         <div class="need" style="position: relative;">
