--- a/Main/Application/templates/Application/course.html
+++ b/Main/Application/templates/Application/course.html
@@ -37,13 +37,13 @@
         <div class="jee">
             <div class="jee__names">
                 <h3 class="jee__names--heading">Choose your Course</h3>
-                <button class="jee__names--btn">Board Exams</button>
-                <button class="jee__names--btn">CBSE</button>
-                <button class="jee__names--btn">ICSE</button>
-                <button class="jee__names--btn">JEE MAIN</button>
-                <button class="jee__names--btn">JEE Advanced</button>
-                <button class="jee__names--btn">NEET</button>
-                <button class="jee__names--btn">Coding</button>
+                <button class="jee__names--btn" style="transform: translateY(7rem);">Board Exams</button>
+                <button class="jee__names--btn" style="transform: translateY(7rem);">CBSE</button>
+                <button class="jee__names--btn" style="transform: translateY(7rem);">ICSE</button>
+                <button class="jee__names--btn" style="transform: translateY(7rem);">JEE MAIN</button>
+                <button class="jee__names--btn" style="transform: translateY(7rem);">JEE Advanced</button>
+                <button class="jee__names--btn" style="transform: translateY(7rem);">NEET</button>
+                <button class="jee__names--btn" style="transform: translateY(7rem);">Coding</button>
             </div>
             <div class="jee__content">
                 <h2 class="jee__content--heading">JEE MAIN <span>Prep Course</span></h2>
