--- a/Main/Application/templates/Application/home.html
+++ b/Main/Application/templates/Application/home.html
@@ -58,6 +58,7 @@
 
     <section id="section-clear" class="container-fluid">
         <h1 class="clear-heading">Clear your Doubts in just 2 Steps</h1>
+        <img class="clear-img" src="{% static 'images/ellipses.png' %}" alt="">
         <div class="clear">
             <img class="clear__img1" src="{% static 'images/one.png' %}" alt="">
             <img class="clear__img2" src="{% static 'images/brain.png' %}" alt="">
@@ -97,6 +98,7 @@
 
     <section id="section-prep" class="container-fluid">
         <h1 class="prep-heading">JEE Mains & Advanced Preparation</h1>
+        <img class="prep-img1" src="{% static 'images/circlepink.png' %}" alt="">
         <div class="prep">
             <img class="prep__img" src="{% static 'images/tablet.png' %}" alt="">
             <div class="prep__content">
@@ -111,10 +113,12 @@
             <input class="prep-radio__item" type="radio" name="prep">
         </div>
         <button class="prep-btn">Prepare for JEE now</button>
+        <img class="prep-img2" src="{% static 'images/circlepink.png' %}" alt="">
     </section>
 
     <section id="section-prep" class="container-fluid">
         <h1 class="prep-heading">NEET Preperation</h1>
+        <img class="prep-img3" src="{% static 'images/circlepink.png' %}" alt="">
         <div class="prep">
             <img class="prep__img" src="{% static 'images/tablet.png' %}" alt="">
             <div class="prep__content">
@@ -133,6 +137,8 @@
 
     <section id="section-explore" class="container-fluid">
         <h1 class="explore-heading">Explore the subjects with us!</h1>
+        <img class="explore-img1" src="{% static 'images/circlepink.png' %}" alt="">
+        <img class="explore-img2" src="{% static 'images/ellipses.png' %}" alt="">
         <div class="explore">
             <div class="explore__content">
                 <img class="explore__content--img" src="{% static 'images/symbol.png' %}" alt="">
@@ -220,7 +226,7 @@
                 </div>
             </div>
             <div class="free__content">
-                <h2 class="free__content--heading"><span> Chemistry</span></h2>
+                <h2 class="free__content--heading"><span style="left: -4rem;"> Chemistry </span></h2>
                 <div class="free__content--box">
                     <div class="free__content--box-item">
                         <img class="free__content--box-item-img" src="{% static 'books/12TH/91DKzsw46IL.jpg' %}" alt="">
@@ -278,6 +284,7 @@
                 </div>
             </div>
         </div>
+        <img class="free-img1" src="{% static 'images/ellipses.png' %}" alt="">
     </section>
 
     <section id="section-board" class="container-fluid">
