--- a/Main/Application/templates/Application/home.html
+++ b/Main/Application/templates/Application/home.html
@@ -311,13 +311,13 @@
             </div>
             <div class="board__content">
                 <div class="board__content--box">
-                    <img class="board__content--box-img" src="{% static 'State/punj.png' %}" alt="">
+                    <img class="board__content--box-img" style="transform: translateY(-50%) scale(1.2);" src="{% static 'State/punj.png' %}" alt="">
                 </div>
                 <h3 class="board__content--title">Punjab</h3>
             </div>
             <div class="board__content">
                 <div class="board__content--box">
-                    <img class="board__content--box-img" src="{% static 'State/uksarkar.png' %}" alt="">
+                    <img class="board__content--box-img" style="transform: translate(.5rem,-40%)  scale(1.3);" src="{% static 'State/uksarkar.png' %}" alt="">
                 </div>
                 <h3 class="board__content--title">Uttarkhand</h3>
             </div>
@@ -325,13 +325,13 @@
         <div class="board">
             <div class="board__content">
                 <div class="board__content--box">
-                    <img class="board__content--box-img" src="{% static 'State/MAHA.png' %}" alt="">
+                    <img class="board__content--box-img" style="transform: translateY(-52%) scale(1.2);" src="{% static 'State/MAHA.png' %}" alt="">
                 </div>
                 <h3 class="board__content--title">Madhya Pradesh</h3>
             </div>
             <div class="board__content">
                 <div class="board__content--box">
-                    <img class="board__content--box-img" src="{% static 'State/HH.png' %}" alt="">
+                    <img class="board__content--box-img" style="transform: translateY(-50%) scale(1.2);" src="{% static 'State/HH.png' %}" alt="">
                 </div>
                 <h3 class="board__content--title">Harayana</h3>
             </div>
@@ -343,7 +343,7 @@
             </div>
             <div class="board__content">
                 <div class="board__content--box">
-                    <img class="board__content--box-img" src="{% static 'State/logo_loading.png' %}" alt="">
+                    <img class="board__content--box-img" style="transform: translateY(-50%) scale(1.4);" src="{% static 'State/logo_loading.png' %}" alt="">
                 </div>
                 <h3 class="board__content--title">Jammu & Kashmir</h3>
             </div>
