--- a/Main/Application/templates/Application/home.html
+++ b/Main/Application/templates/Application/home.html
@@ -359,24 +359,27 @@
 
     <section id="section-expert" class="container-fluid">
         <h1 class="expert-heading">Meet our Expert tutors</h1>
+        <img class="expert-img1" src="{% static 'images/ellipses.png' %}" alt="">
         <div class="expert">
-            <div class="expert__content">
+        <div class="expert__content">
+            <img class="expert-img2" src="{% static 'images/circlepink.png' %}" alt="">
                 <div class="expert__content--box">
                     <div class="expert__content--box-img" style="background-image: url('../../../static/images/group.jpg');"></div>
                     <p class="expert__content--box-para">Coursify enabled me to teach in small groups and have better connection with my students.</p>
-                    <h4 class="expert__content--box-text">-Shiv Arora , BSc Science</h4>
+                    <h4 class="expert__content--box-text">-- Shiv Arora , BSc Science</h4>
                 </div>
+                <img class="expert-img3" src="{% static 'images/circlegreen.png' %}" alt="">
                 <div class="expert__content--box">
-                    <div class="expert__content--box-img" style="background-image: url('../../../static/images/group.jpg');transform:translateX(140%)"></div>
+                    <div class="expert__content--box-img" style="background-image: url('../../../static/images/group.jpg');transform:translateX(130%)"></div>
                     <p class="expert__content--box-para" style="justify-self: end;">Coursify enabled me to teach in small groups and have better connection with my students.</p>
-                    <h4 class="expert__content--box-text" style="justify-self: end;">-Shiv Arora , BSc Science</h4>
+                    <h4 class="expert__content--box-text" style="justify-self: end;">-- Shiv Arora , BSc Science</h4>
                 </div>
                 <div class="expert__content--box" style="grid-column: 1 / 3;width:50%;justify-self:center;">
-                    <div class="expert__content--box-img" style="background-image: url('../../../static/images/group.jpg');height:14rem;width:14rem"></div>
+                    <div class="expert__content--box-img" style="background-image: url('../../../static/images/group.jpg');height:17rem;width:17rem"></div>
                     <p class="expert__content--box-para" style="justify-self: center;font-size:2.5rem;width:80%;">Coursify enabled me to teach in small groups and have better connection with my students.</p>
-                    <h4 class="expert__content--box-text" style="justify-self: center;font-size:2rem;">-Shiv Arora , BSc Science</h4>
+                    <h4 class="expert__content--box-text" style="justify-self: center;font-size:2rem;">-- Shiv Arora , BSc Science</h4>
                 </div>
-                
+                <img class="expert-img4" src="{% static 'images/circleorange.png' %}" alt="">
             </div>
         </div>
     </section>
@@ -395,10 +398,23 @@
                 <h2 class="say__arrow--2">></h2>
             </div> 
         </div>
+        <img class="say-img1" src="{% static 'images/ellipses.png' %}" alt="">
         <button class="say-btn">Download the app for free</button>
     </section>
 
     <footer id="section-footer1" class="container-fluid">
+        <div class="footer1-connect">
+            <h3 class="footer1-connect--text">Connect with us 
+                <img class="footer1-connect--text-img" src="{% static 'images/facebook.png' %}" alt=""> 
+                <img class="footer1-connect--text-img" src="{% static 'images/instagram.png' %}" alt=""> 
+                <img class="footer1-connect--text-img" src="{% static 'images/youtube.png' %}" alt=""> 
+                <img class="footer1-connect--text-img" src="{% static 'images/linkedin.png' %}" alt=""> 
+            </h3>
+            <h3 class="footer1-connect--text1">Contact 
+                <img class="footer1-connect--text1-img" src="{% static 'images/email.png' %}" alt=""> 
+                <span>Coursify@gmail.com</span>
+            </h3>
+        </div>
         <div class="footer1">
             <div class="footer1__content">
                 <div class="footer1__content--ncert">
