--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -1688,7 +1688,7 @@ body {
   left: 50%;
   transform: translateX(-50%); }
   .free__content {
-    margin-bottom: 10rem;
+    margin-bottom: 3rem;
     display: grid;
     grid-template-columns: 10% 90%;
     justify-items: center; }
@@ -1706,7 +1706,7 @@ body {
     .free__content--box {
       display: grid;
       grid-template-columns: repeat(5, 13%) 10%;
-      column-gap: 6rem; }
+      column-gap: 4.5rem; }
       .free__content--box-item {
         position: relative; }
         .free__content--box-item-img {
@@ -1719,7 +1719,7 @@ body {
           position: absolute;
           bottom: 3.5rem;
           left: 50%;
-          transform: translateX(-50%) translateY(1rem);
+          transform: translateX(-46%) translateY(1rem);
           background-color: #D60B3C;
           color: white;
           border: none;
@@ -1730,7 +1730,9 @@ body {
           .free__content--box-item-btn:focus, .free__content--box-item-btn:active {
             outline: none; }
         .free__content--box-item-title {
-          transform: translateY(0.5rem);
+          position: relative;
+          left: 50%;
+          transform: translate(-45%, 0.6rem);
           font-size: 1.5rem;
           font-family: 'Roboto',sans-serif;
           font-weight: 500;
