--- a/Main/Application/templates/Application/home.html
+++ b/Main/Application/templates/Application/home.html
@@ -299,30 +299,11 @@
             </div>
             <div class="board__content">
                 <div class="board__content--box">
-                    <img class="board__content--box-img" src="{% static 'State/bhse new logo JU.png' %}" alt="">
+                    <img class="board__content--box-img" src="{% static 'State/9dWFdq-8_400x400.png' %}" alt="">
+                    
                 </div>
-                <h3 class="board__content--title">Delhi</h3>
+                <h3 class="board__content--title">Bihar</h3>
             </div>
-            <div class="board__content">
-                <div class="board__content--box">
-                    <img class="board__content--box-img" src="{% static 'State/ap.png' %}" alt="">
-                </div>
-                <h3 class="board__content--title">Arunachal Pradesh</h3>
-            </div>
-            <div class="board__content">
-                <div class="board__content--box">
-                    <img class="board__content--box-img" style="transform: translateY(-50%) scale(1.2);" src="{% static 'State/punj.png' %}" alt="">
-                </div>
-                <h3 class="board__content--title">Punjab</h3>
-            </div>
-            <div class="board__content">
-                <div class="board__content--box">
-                    <img class="board__content--box-img" style="transform: translate(.5rem,-40%)  scale(1.3);" src="{% static 'State/uksarkar.png' %}" alt="">
-                </div>
-                <h3 class="board__content--title">Uttarkhand</h3>
-            </div>
-        </div>
-        <div class="board">
             <div class="board__content">
                 <div class="board__content--box">
                     <img class="board__content--box-img" style="transform: translateY(-52%) scale(1.2);" src="{% static 'State/MAHA.png' %}" alt="">
@@ -331,28 +312,48 @@
             </div>
             <div class="board__content">
                 <div class="board__content--box">
-                    <img class="board__content--box-img" style="transform: translateY(-50%) scale(1.2);" src="{% static 'State/HH.png' %}" alt="">
+                    <img class="board__content--box-img" src="{% static 'State/180px-BSER-Logo.jpg' %}" alt="">
                 </div>
-                <h3 class="board__content--title">Harayana</h3>
+                <h3 class="board__content--title">Rajasthan</h3>
             </div>
             <div class="board__content">
                 <div class="board__content--box">
-                    <img class="board__content--box-img" src="{% static 'State/CG.png' %}" alt="">
+                    <img class="board__content--box-img" src="{% static 'State/1_3C5LdNNrhUtAlMFiASjE2g.png' %}" alt="">
                 </div>
-                <h3 class="board__content--title">Chattisgarh</h3>
+                <h3 class="board__content--title">Maharashtra</h3>
+            </div>
+        </div>
+        <div class="board">
+            
+            <div class="board__content">
+                <div class="board__content--box">
+                    <img class="board__content--box-img" src="{% static 'State/5b90ce337592ae27150d9510a2c418ee.png' %}" alt="">
+                </div>
+                <h3 class="board__content--title">Gujarat</h3>
             </div>
             <div class="board__content">
                 <div class="board__content--box">
-                    <img class="board__content--box-img" style="transform: translateY(-50%) scale(1.4);" src="{% static 'State/logo_loading.png' %}" alt="">
+                    <img class="board__content--box-img" src="{% static 'State/West_Bengal_Council_of_Higher_Secondary_Education_Logo.png' %}" alt="">
                 </div>
-                <h3 class="board__content--title">Jammu & Kashmir</h3>
+                <h3 class="board__content--title">West Bengal</h3>
             </div>
             <div class="board__content">
                 <div class="board__content--box">
-                    <img class="board__content--box-img" src="{% static 'State/9dWFdq-8_400x400.png' %}" alt="">
-                    
+                    <img class="board__content--box-img" style="transform: translateY(-50%) scale(.9);" src="{% static 'State/700px-TamilNadu_Logo.svg.png' %}" alt="">
                 </div>
-                <h3 class="board__content--title">Bihar</h3>
+                <h3 class="board__content--title">Tamil Nadu</h3>
+            </div>
+            <div class="board__content">
+                <div class="board__content--box">
+                    <img class="board__content--box-img" src="{% static 'State/index.png' %}" alt="">
+                </div>
+                <h3 class="board__content--title">Karnataka</h3>
+            </div>
+            <div class="board__content">
+                <div class="board__content--box">
+                    <img class="board__content--box-img" src="{% static 'State/_HrkhUvn.png' %}" alt="">
+                </div>
+                <h3 class="board__content--title">Andhra Pradesh</h3>
             </div>
         </div>
     </section>
@@ -485,34 +486,41 @@
                     <div class="ncert-content">
                         <h2 class="ncert-title">Class 11-12</h2>
                         <div class="ncert-link">
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">HC Verma Solutions class 12 Physics</a>
+                            <a class="ncert-link--items" href="">M S Chouhan Class 12 Chemistry</a>
+                            <a class="ncert-link--items" href="">K C Sinha Class 12 Maths</a>
+                            <a class="ncert-link--items" href="">Errorless Class 12 Biology</a>
+                            <a class="ncert-link--items" href="">HC Verma Solutions class 11 Physics</a>
+                            <a class="ncert-link--items" href="">M S Chouhan Class 11 Chemistry</a>
+                            <a class="ncert-link--items" href="">K C Sinha Class 11 Maths</a>
+                            <a class="ncert-link--items" href="">Errorless Class 11 Biology</a>
                         </div>
                     </div>
                     <div class="ncert-content">
                         <h2 class="ncert-title">Class 9-10</h2>
                         <div class="ncert-link">
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">RD Sharma Class 10 Maths</a>
+                            <a class="ncert-link--items" href="">RS Agarwal Class 10 Maths</a>
+                            <a class="ncert-link--items" href="">Exampler Class 10 Science</a>
+                            <a class="ncert-link--items" href="">Lakmir Singh Class 10 Science</a>
+                            <a class="ncert-link--items" href="">RD Sharma Class 9 Maths</a>
+                            <a class="ncert-link--items" href="">RS Agarwal Class 9 Maths</a>
+                            <a class="ncert-link--items" href="">Exampler Class 9 Science</a>
+                            <a class="ncert-link--items" href="">Lakmir Singh Class 9 Science</a>
                         </div>
                     </div>
                     <div class="ncert-content">
                         <h2 class="ncert-title">Class 6-8</h2>
                         <div class="ncert-link">
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
-                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">RD Sharma Class 8 Maths</a>
+                            <a class="ncert-link--items" href="">RS Agarwal Class 8 Maths</a>
+                            <a class="ncert-link--items" href="">Exampler Class 8 Science</a>
+                            <a class="ncert-link--items" href="">RD Sharma Class 7 Maths</a>
+                            <a class="ncert-link--items" href="">RS Agarwal Class 7 Maths</a>
+                            <a class="ncert-link--items" href="">Exampler Class 7 Science</a>
+                            <a class="ncert-link--items" href="">RD Sharma Class 6 Maths</a>
+                            <a class="ncert-link--items" href="">RS Agarwal Class 6 Maths</a>
+                            <a class="ncert-link--items" href="">Exampler Class 6 Science</a>
                         </div>
                     </div>
                 </div>
