--- a/Main/Application/templates/Application/base.html
+++ b/Main/Application/templates/Application/base.html
@@ -22,19 +22,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'live' %}">Live classes</a>
+                    <a class="nav-link" href="{% url 'live' %}">Live Classes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'boardexams' %}">Video Library</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'course' %}">Course</a>
+                    <a class="nav-link" href="{% url 'course' %}">Courses</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'book' %}">Book</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'board' %}">Board</a>
+                    <a class="nav-link" href="{% url 'board' %}" style="margin-right: 6.5rem;">Board</a>
                 </li>
             </ul>
         </div>
