--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -92,7 +92,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   display: grid;
-  width: 90%;
+  width: 70%;
   grid-template-columns: repeat(5, 20%); }
   .board__content {
     position: relative;
@@ -1691,7 +1691,7 @@ body {
   .free__content {
     margin-bottom: 3rem;
     display: grid;
-    grid-template-columns: 10% 90%;
+    grid-template-columns: 13% 87%;
     justify-items: center; }
     .free__content--heading {
       width: 100%;
@@ -1708,7 +1708,10 @@ body {
     .free__content--box {
       display: grid;
       grid-template-columns: repeat(5, 13%) 10%;
-      column-gap: 4.5rem; }
+      column-gap: 4.5rem;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%); }
       .free__content--box-item {
         position: relative; }
         .free__content--box-item-img {
@@ -2919,21 +2922,24 @@ body {
 
 .navbar-brand img {
   height: 7rem;
-  margin-left: 4rem; }
+  margin-left: 4rem;
+  margin-top: 2rem; }
 
 nav {
   background: white; }
 
-.navbar-nav .nav-item .nav-link {
-  color: #4B4B4B !important;
-  font-size: 1.8rem;
-  margin-right: 3rem;
-  font-weight: 500;
-  border-bottom: .3rem solid transparent; }
-  .navbar-nav .nav-item .nav-link:hover {
-    color: #D60B3C !important; }
-  .navbar-nav .nav-item .nav-link:active, .navbar-nav .nav-item .nav-link:focus {
-    border-bottom: 0.3rem solid #DF0B39; }
+.navbar-nav {
+  margin-top: 2rem; }
+  .navbar-nav .nav-item .nav-link {
+    color: #4B4B4B !important;
+    font-size: 1.8rem;
+    margin-right: 3rem;
+    font-weight: 500;
+    border-bottom: .3rem solid transparent; }
+    .navbar-nav .nav-item .nav-link:hover {
+      color: #D60B3C !important; }
+    .navbar-nav .nav-item .nav-link:active, .navbar-nav .nav-item .nav-link:focus {
+      border-bottom: 0.3rem solid #DF0B39; }
 
 .ncert-heading {
   text-align: center;
@@ -4476,7 +4482,7 @@ nav {
 #section-search {
   height: fit-content;
   position: relative;
-  margin-top: 8rem;
+  margin-top: 3rem;
   padding: 10rem 0rem; }
 
 #section-clear {
